feat: email sending setup
